# binary_prediction_game

./: .gitignore  README.md  pyproject.toml  run_game.sh
built-in-sequences/: kaiserslautern_cloudy_open_meteo__2020_2025_2192.yml
data/: generate_demo_sequences.py
data/built-in-sequences/: aapl_close_direction_stooq_2010_2025_4014.yml  alternating.txt  alternating_01_1000.yml  pi_decimal_digit_parity_1000.yml  simple_lfsr_10bit_1000.yml
scripts/: generate_demo_sequences.py  tdm_entry.py
src/binary_prediction_game/: __init__.py  __main__.py  app.py  config.py  game_state.py  sequence_io.py
src/binary_prediction_game/models/: __init__.py  base.py  eSPA.py  factory.py  frequency.py  hopfield.py  ngram.py  sklearn_predictors.py  utils.py
src/binary_prediction_game/resources/: bad_words.txt
src/binary_prediction_game/ui/: components.py  layout.py  theme.py
